--- a/sources/leddevice/LedDeviceSchemas.qrc
+++ b/sources/leddevice/LedDeviceSchemas.qrc
@@ -28,6 +28,7 @@
 		<file alias="schema-udpraw">schemas/schema-udpraw.json</file>
 		<file alias="schema-ws2801">schemas/schema-ws2801.json</file>
 		<file alias="schema-ws2812spi">schemas/schema-ws2812spi.json</file>
+		<file alias="schema-ws2812_ftdi">schemas/schema-ws2812ftdi.json</file>
 		<file alias="schema-apa104">schemas/schema-apa104.json</file>
 		<file alias="schema-ws281x">schemas/schema-ws281x.json</file>
 		<file alias="schema-karate">schemas/schema-karate.json</file>
@@ -36,5 +37,6 @@
 		<file alias="schema-yeelight">schemas/schema-yeelight.json</file>
 		<file alias="schema-cololight">schemas/schema-cololight.json</file>
 		<file alias="schema-awa_spi">schemas/schema-awa_spi.json</file>
+		<file alias="schema-apa102_ftdi">schemas/schema-apa102_ftdi.json</file>
 	</qresource>
 </RCC>
